Fix heading and body text overflow issue inside the summary box on smaller screens

--- a/src/stylesheets/components/_summary-box.scss
+++ b/src/stylesheets/components/_summary-box.scss
@@ -26,7 +26,6 @@ $summary-box-context: "Summary Box";
 }
 
 .usa-summary-box__body {
-  display: table-cell;
   vertical-align: top;
 }
 
@@ -34,6 +33,9 @@ $summary-box-context: "Summary Box";
   @include typeset($theme-summary-box-font-family, "lg", 2);
   margin-top: 0;
   margin-bottom: units(1);
+  @include at-media-max("mobile-lg") {
+    word-wrap: break-word;
+  }
 }
 
 .usa-summary-box__text {
